Revert "fix: overflow clip"
This reverts commit be47fbb27e439edb609a905589e5738b1428691c.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,15 +29,7 @@
 
     @media (pointer: coarse) and (any-pointer: coarse) and (hover: none) and (any-hover: none) {
       &::before {
-        width: 50vw;
-      }
-    }
-
-    @supports (-webkit-touch-callout: none) {
-      @media (pointer: coarse) and (any-pointer: coarse) and (hover: none) and (any-hover: none) {
-        &::before {
-          display: none;
-        }
+        display: none;
       }
     }
   }
@@ -229,7 +221,6 @@
   html {
     // Need scroll padding to offset the fixed header
     @apply scroll-smooth scroll-pt-16;
-    overflow-x: clip;
     scrollbar-color: colors.$light-shades
       color.scale(colors.$dark-shades, $alpha: -30%);
   }
